# obs_jira

./: .coveragerc  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
obs_jira/: __init__.py  obs_jira.py
obs_jira/tests/: test_obs_jira.py
releasenotes/source/: conf.py  index.rst
