[metadata]
name = obs_jira
summary = Jira CLI and Wrapper
description_file =
    README.rst
author = Daniel Mellado
author_email = dmellado@redhat.com
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    obs_jira

[entry_points]
console_scripts =
    jira-list-issues = obs_jira.obs_jira:print_issues
